<resources>
    <string name="app_name">Women Safety</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="women">Women</string>
    <string name="safety">Safety</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="choose_gender">Choose Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age :</string>
    <string name="mobile">Phone Number</string>
    <string name="code">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password_forget">Forget\nPassword</string>
    <string name="email_selection_details">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_details">Select which contact detail should we use to reset yur password?</string>
    <string name="via_sms">via sms:</string>
    <string name="dummy_mobile">+91-9825569810</string>
    <string name="via_email">via email:</string>
    <string name="dummy_email">xyz@gmail.com</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_detail">Your identity has been verified!!\nSet your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_details">Your password has been updated!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="login_with_otp">Login with OTP</string>

//mapbox
    <string name="mapbox_access_token">sk.eyJ1Ijoid29tZW5zYWZldHkiLCJhIjoiY2tkMDVpN2x2MHFhbjJzbXY1ZTF4OXU3ayJ9.Tc4igPnGCEg55wMOtgX1IA</string>
</resources>