<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.forget.MakeSelectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/create1_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/make_selection_details"
            android:layout_marginVertical="10dp"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/light_white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_action_mobile" />

            <TextView
                android:id="@+id/via_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_toEndOf="@id/mobile_icon"
                android:layout_toRightOf="@id/mobile_icon"
                android:fontFamily="@font/roboto"
                android:text="@string/via_sms"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/via_sms"
                android:layout_toEndOf="@id/mobile_icon"
                android:layout_toRightOf="@id/mobile_icon"
                android:fontFamily="@font/roboto"
                android:text="@string/dummy_mobile"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnMobileSelection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/light_white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_action_mail"
                android:tint="@android:color/black" />

            <TextView
                android:id="@+id/via_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_toEndOf="@id/email_icon"
                android:layout_toRightOf="@id/email_icon"
                android:fontFamily="@font/roboto"
                android:text="@string/via_email"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/email_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/via_email"
                android:layout_toEndOf="@id/email_icon"
                android:layout_toRightOf="@id/email_icon"
                android:fontFamily="@font/roboto"
                android:text="@string/dummy_email"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnEmailSelection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_color" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>