<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_action_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:text="@string/code"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="100sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:text="@string/verification"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:text="@string/enter_one_time_password"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/light_white"
                android:cursorVisible="true"
                android:inputType="number"
                app:cursorColor="@android:color/black"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemRadius="5dp"
                app:itemWidth="50dp"
                app:lineColor="@color/colorAccent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:layout_marginHorizontal="20dp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


